# ICE-V-Wireless

./: .gitattributes  Getting-Started.md  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/config/: starship.toml
.github/workflows/: build-firmware.yml  build-gateware.yml
Firmware/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
Firmware/main/: CMakeLists.txt  adc_c3.c  adc_c3.h  credentials_template.h  ice.c  ice.h  idf_component.yml  main.c  main.h  sercmd.c  sercmd.h  socket.c  socket.h  spiffs.c  spiffs.h  uart2.c  uart2.h  wifi.c  wifi.h
Gateware/: README.md
Gateware/blinky_demo/: README.md
Gateware/blinky_demo/icestorm/: Makefile
Gateware/blinky_demo/src/: blinky.v
Gateware/factory_bitstream/: README.md
Gateware/factory_bitstream/c/: Makefile  acia.c  clkcnt.c  i2c.h  mailbox.h  main.c  printf.h  spi.c  spi.h  start.S  system.h
Gateware/icestorm/: Makefile
Gateware/psram_demo/: README.md
Gateware/riscv/c/: .#main.c.1.4  (+9 more)
Gateware/spi_pass/: Makefile  README.md  spi_pass.v
Gateware/src/: bitstream.pcf  bitstream.v  lp4k_bob.pcf  lp4k_bob.v  up5k_esp32c3.pcf  up5k_esp32c3.sdc  up5k_esp32c3.v
Hardware/: README.md  esp32c3_fpga.csv  esp32c3_fpga.kicad_pcb  esp32c3_fpga.kicad_prl  esp32c3_fpga.kicad_pro  esp32c3_fpga.kicad_sch  esp32c3_fpga.xml  fp-info-cache  fp-lib-table  sym-lib-table
Hardware/bom/: ibom.html
host/: .gitignore  Makefile  send_c3usb.c
pinout/: .gitignore  README.md  data.py  pinout_diagram.py  styles.css
python/: README.md  icevwprog.py  send_c3sock.py  send_c3usb.py
(+27 files in other folders)
